# ribozap

./: .gitignore  Cargo.toml
src/: app.rs  lib.rs  logging.rs  main.rs  test_download.rs
src/protein/: dataset.rs  matching.rs  mod.rs  molecular_weights.rs
src/sequence/: analysis.rs  codon.rs  conversion.rs  mod.rs  translation.rs
src/ui/: colors.rs  display.rs  mod.rs  renderer.rs
