[package]
name = "ribozap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ribozap"
path = "src/main.rs"

[dependencies]
bio-seq = { version = "0.14.2", features = ["translation"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
flate2 = "1.1.2"
dirs = "6.0.0"
