[package]
name = "ribozap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ribozap"
path = "src/main.rs"

[dependencies]
bio-seq = { version = "0.14.2", features = ["translation"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
flate2 = "1.1.2"
dirs = "6.0.0"
log = "0.4.27"
env_logger = "0.11.8"
chrono = { version = "0.4.41", features = ["serde"] }
human-panic = "2.0.2"
num_cpus = "1.17.0"

[dev-dependencies]
num_cpus = "1.17.0"
tempfile = "3.20.0"
